--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,3 +1,7 @@
 spring:
   datasource:
     url: jdbc:tc:postgresql:15:///sandbox?TC_DAEMON=true
+
+  security:
+    user:
+      password: password
